# TeamSaki

./: README.md
team_challenge/: CMakeLists.txt  package.xml
team_challenge/config/: params.yaml
team_challenge/include/: digit_detector.hpp  shooter_processor.hpp  vision_processor.hpp
team_challenge/launch/: vision.launch.py
team_challenge/results/: TEAM21_results1.json  TEAM21_results1.json.sha256  TEAM21_results2.json  TEAM21_results2.json.sha256  TEAM21_results3.json  TEAM21_results3.json.sha256  TEAM21_results4.json  TEAM21_results4.json.sha256
team_challenge/results/armor/: TEAMENAME_results0.json  TEAMENAME_results0.json.sha256
team_challenge/results/rect/: TEAMENAME_results0.json  TEAMENAME_results0.json.sha256
team_challenge/results/ring/: TEAM21_results1.json  TEAM21_results1.json.sha256
team_challenge/results/sphere/: TEAMENAME_results0.json  TEAMENAME_results0.json.sha256
team_challenge/src/: shooter_node.cpp  test.cpp  vision_node.cpp
